--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "canvas": "^2.11.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.5.1",
     "googleapis": "^128.0.0",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.5",
     "openai": "^5.12.2",
+    "pg": "^8.11.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^9.0.7",
