--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "canvas": "^2.11.2",
+    "canvas": "^3.2.0",
+    "dotenv": "^17.2.1",
     "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.1",
     "googleapis": "^128.0.0",
     "lucide-react": "^0.292.0",
@@ -27,7 +28,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.24",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.0.0",
     "@types/pg": "^8.10.9",
     "@types/react": "^18.0.0",
