--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.1",
     "googleapis": "^128.0.0",
+    "jimp": "^1.6.0",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.5",
     "openai": "^5.12.2",
     "pg": "^8.11.3",
+    "puppeteer": "^24.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.3",
+    "sharp": "^0.34.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
