Fix production issues for Step 2 & Step 3 pipeline
- Add runtime and maxDuration exports to all job routes
- Configure Puppeteer for serverless environments with @sparticuz/chromium
- Update vercel.json with proper function timeouts (300s for heavy tasks)
- Fix temp directory handling for production (/tmp instead of local)
- Add serverless-optimized Chrome args for Puppeteer
- Increase maxDuration to 300s for video processing routes
- Ensure FFmpeg and Puppeteer work in Vercel serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,18 @@
   "functions": {
     "app/api/youtube/upload/route.ts": {
       "maxDuration": 300
+    },
+    "app/api/jobs/create-frames/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/jobs/assemble-video/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/jobs/upload-quiz-videos/route.ts": {
+      "maxDuration": 300
+    },
+    "app/api/jobs/generate-quiz/route.ts": {
+      "maxDuration": 120
     }
   }
 }
