--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "canvas": "^3.2.0",
     "dotenv": "^17.2.1",
