added multiple theme colors

--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ DATABASE_URL_UNPOOLED="postgresql://neondb_owner:npg_iTD3xcFj2WPX@ep-lucky-smoke
 DEEPSEEK_API_KEY="sk-6206ad67e8d14d408739f44fc49b478e"
 GOOGLE_CLIENT_ID="841911259733-p7kbb8rbsc49s7j64cndir1cv0dsr32f.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+GOOGLE_REFRESH_TOKEN="1//04UAIvfIiX04_CgYIARAAGAQSNwF-L9IrN_7YRX8mHuRYyKjApdAOlgo-bWIOBnjHoVfQFom6obT6M1inakkiyYYOLUVvIL_0TII"
 NEON_PROJECT_ID="crimson-haze-61309062"
 NEXTAUTH_SECRET="Oi+5Dgha8DDZbKJMWk2nrXgRFa9X2Z8h6hbPQy4+6hA="
 NEXTAUTH_URL="https://youtube-playlist-uploader.vercel.app"
