--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "youtube-uploader-webapp",
+  "name": "ai-youtuber",
   "version": "1.0.0",
-  "description": "Universal YouTube Uploader - Web App with Google OAuth",
+  "description": "AI Youtuber running 24x7",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
@@ -16,13 +16,10 @@
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.1",
     "ffmpeg-static": "^5.2.0",
-    "ffprobe-static": "^3.1.0",
-    "fluent-ffmpeg": "^2.1.3",
     "formidable": "^3.5.1",
     "googleapis": "^128.0.0",
     "jimp": "^1.6.0",
     "lucide-react": "^0.292.0",
-    "mp4-muxer": "^5.2.2",
     "next": "^14.0.0",
     "next-auth": "^4.24.5",
     "openai": "^5.12.2",
@@ -43,8 +40,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2",
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
