English Persona activated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-youtuber",
+  "name": "english-youtuber",
   "version": "1.0.0",
   "description": "AI Youtuber running 24x7",
   "main": "index.js",
