Fix FFmpeg binary detection and bundling for Vercel deployment
- Enhanced FFmpeg path resolution with comprehensive debugging
- Added Vercel-specific build configuration
- Created .vercelignore to ensure FFmpeg binaries are included
- Improved spawn error handling with detailed context
- Added binary validation before execution

--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,10 @@
     "app/api/jobs/generate-quiz/route.ts": {
       "maxDuration": 120
     }
+  },
+  "build": {
+    "env": {
+      "FFMPEG_STATIC_DOWNLOAD_PATH": "/tmp/ffmpeg"
+    }
   }
 }
