Replace ffmpeg-static with @ffmpeg-installer/ffmpeg for better serverless compatibility
- Uninstalled ffmpeg-static which was missing binaries in Vercel
- Installed @ffmpeg-installer/ffmpeg designed for serverless environments
- Updated FFmpeg path resolution in assemble-video route
- Fixed all references in test files and configuration
- Updated .vercelignore and next.config.js for new package
- Build succeeds with FFmpeg binary properly detected

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,7 @@
 # Vercel ignore file
 # Ensure FFmpeg binaries are NOT ignored
-!node_modules/ffmpeg-static/**
-!node_modules/ffmpeg-static/ffmpeg
-!node_modules/ffmpeg-static/bin/**
+!node_modules/@ffmpeg-installer/**
+!node_modules/@ffmpeg-installer/ffmpeg/**
 
 # Standard ignores
 .env.local
