--- a/package.json
+++ b/package.json
@@ -20,31 +20,31 @@
     "googleapis": "^128.0.0",
     "jimp": "^1.6.0",
     "lucide-react": "^0.292.0",
-    "next": "^14.0.0",
-    "next-auth": "^4.24.5",
-    "openai": "^5.12.2",
-    "pg": "^8.11.3",
-    "puppeteer": "^24.17.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-dropzone": "^14.2.3",
-    "sharp": "^0.34.3",
-    "uuid": "^9.0.1",
-    "xml2js": "^0.6.2"
+    "next": "14.2.3",
+    "next-auth": "4.24.5",
+    "openai": "5.12.2",
+    "pg": "8.11.3",
+    "puppeteer": "24.17.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-dropzone": "14.2.3",
+    "sharp": "0.34.3",
+    "uuid": "9.0.1",
+    "xml2js": "0.6.2"
   },
   "devDependencies": {
-    "@types/fluent-ffmpeg": "^2.1.27",
-    "@types/node": "^20.0.0",
-    "@types/pg": "^8.10.9",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^9.0.7",
-    "autoprefixer": "^10.0.0",
-    "eslint": "^9.34.0",
-    "eslint-config-next": "^15.5.2",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0",
-    "typescript": "^5.0.0"
+    "@types/fluent-ffmpeg": "2.1.27",
+    "@types/node": "20.11.30",
+    "@types/pg": "8.10.9",
+    "@types/react": "18.2.72",
+    "@types/react-dom": "18.2.22",
+    "@types/uuid": "9.0.7",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.4.3"
   },
   "engines": {
     "node": ">=18.0.0"
