fix: replace @ffmpeg-installer with ffmpeg-static for reliable serverless video assembly
- Replace unreliable @ffmpeg-installer/ffmpeg with ffmpeg-static
- Simplify FFmpeg commands for faster processing (ultrafast preset)
- Add individual timeouts (30s per frame, 90s final assembly)
- Improve error handling and logging
- Update Next.js config and Vercel ignore for new package

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,7 +1,6 @@
 # Vercel ignore file
 # Ensure FFmpeg binaries are NOT ignored
-!node_modules/@ffmpeg-installer/**
-!node_modules/@ffmpeg-installer/ffmpeg/**
+!node_modules/ffmpeg-static/**
 
 # Standard ignores
 .env.local
