--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sparticuz/chromium": "^138.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "canvas": "^3.2.0",
     "cloudinary": "^2.7.0",
     "dotenv": "^17.2.1",
+    "ffmpeg-static": "^5.2.0",
     "formidable": "^3.5.1",
     "googleapis": "^128.0.0",
     "jimp": "^1.6.0",
