fix: improve FFmpeg path resolution for Vercel serverless deployment
- Enhanced FFmpeg binary detection with fallback paths
- Added comprehensive error logging and debugging
- Increased memory allocation for video assembly function
- Added explicit file tracing for ffmpeg-static package
- Improved error handling for serverless environment issues

--- a/package.json
+++ b/package.json
@@ -48,5 +48,12 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "vercel": {
+    "functions": {
+      "app/api/jobs/assemble-video/route.ts": {
+        "includeFiles": "node_modules/ffmpeg-static/**"
+      }
+    }
   }
 }
