--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
       "maxDuration": 300
     },
     "app/api/jobs/assemble-video/route.ts": {
-      "maxDuration": 300
+      "maxDuration": 300,
+      "memory": 3008
     },
     "app/api/jobs/upload-quiz-videos/route.ts": {
       "maxDuration": 300
@@ -20,5 +21,8 @@
     "env": {
       "FFMPEG_STATIC_DOWNLOAD_PATH": "/tmp/ffmpeg"
     }
+  },
+  "outputFileTracing": {
+    "packageJsonTracing": true
   }
 }
