fix: revert to working @ffmpeg-installer/ffmpeg package
- Install @ffmpeg-installer/ffmpeg which was working before Sept 12
- Revert to simple FFmpeg path resolution that was working in production
- Remove complex webpack bundling that was causing ENOENT errors
- This restores the working video assembly functionality

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@sparticuz/chromium": "^138.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "canvas": "^3.2.0",
