fix: remove final ffmpeg-static references from .vercelignore
- Update .vercelignore to reference @ffmpeg-installer instead of ffmpeg-static
- Ensures correct FFmpeg binaries are included in deployment
- Completes cleanup of all ffmpeg-static references

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,6 +1,6 @@
 # Vercel ignore file
 # Ensure FFmpeg binaries are NOT ignored
-!node_modules/ffmpeg-static/**
+!node_modules/@ffmpeg-installer/**
 
 # Standard ignores
 .env.local
