--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "18.2.72",
     "@types/react-dom": "18.2.22",
     "@types/uuid": "9.0.7",
+    "@types/xml2js": "^0.4.14",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
